--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "MD",
+  "name": "Mirsal",
   "version": "10.1.80",
-  "description": "MD",
+  "description": "Mirsal Desktop Chat App",
   "main": "main.js",
+  "type": "commonjs",
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
@@ -84,7 +85,7 @@
   "homepage": "https://stgmirsalassets.devinprocess.com/",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^13.3.0",
+    "electron": "^32.0.1",
     "electron-builder": "^21.0.15",
     "electron-builder-squirrel-windows": "^22.14.13",
     "jest": "^26.0.1",
@@ -94,8 +95,8 @@
     "webrtc-adapter": "^7.5.1"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.0.20",
-    "@ffprobe-installer/ffprobe": "^1.1.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^1.4.1",
     "@giphy/js-fetch-api": "^2.4.0",
     "@journeyapps/sqlcipher": "^5.3.1",
     "@ninja-labs/verify-pdf": "^1.0.0",
@@ -106,17 +107,17 @@
     "chunking-streams": "0.0.8",
     "date-and-time": "^0.14.2",
     "dotenv": "^16.0.0",
-    "electron-is-dev": "^1.2.0",
-    "electron-log": "^4.1.2",
+    "electron-is-dev": "^2.0.0",
+    "electron-log": "^4.4.8",
     "electron-prompt": "^1.3.1",
-    "electron-squirrel-startup": "^1.0.0",
+    "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^4.3.1",
-    "electron-windows-badge": "^1.0.5",
+    "electron-windows-badge": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.3",
     "jsonschema": "^1.4.0",
-    "keytar": "^7.7.0",
+    "keytar": "^7.9.0",
     "livekit-client": "^2.1.3",
     "lodash": "^4.17.21",
     "matomo-tracker": "^2.2.4",
@@ -131,13 +132,12 @@
     "request": "^2.88.0",
     "simple-thumbnail": "^1.6.5",
     "sqlite-cipher": "^0.3.6",
-    "strophe.js": "^1.3.4",
+    "strophe.js": "^3.0.1",
     "url-metadata": "^2.4.0",
-    "uuid": "^3.4.0",
+    "uuid": "^10.0.0",
     "validator": "^13.7.0",
     "vcards-js": "^2.10.0",
     "vcf": "^2.1.0",
-    "win-ca": "^3.4.5",
     "ws": "^7.3.1",
     "xml-js": "^1.6.11"
   }
