--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "electron-builder": "^21.0.15",
     "electron-builder-squirrel-windows": "^22.14.13",
     "jest": "^26.0.1",
+    "node-forge": "^1.3.1",
     "node-gyp": "^5.0.3",
     "spectron": "^11.1.0",
     "wait-for-expect": "^3.0.2",
@@ -101,7 +102,7 @@
     "@journeyapps/sqlcipher": "^5.3.1",
     "@ninja-labs/verify-pdf": "^1.0.0",
     "aes-js": "^3.1.2",
-    "axios": "^0.21.4",
+    "axios": "^1.7.7",
     "bignumber.js": "^9.1.2",
     "bluebird": "^3.5.5",
     "chunking-streams": "0.0.8",
@@ -113,13 +114,11 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^4.3.1",
     "electron-windows-badge": "^1.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "jquery": "^3.5.1",
+    "fluent-ffmpeg": "^2.1.3",
     "jquery-validation": "^1.19.3",
-    "jsonschema": "^1.4.0",
+    "jsonschema": "^1.4.1",
     "keytar": "^7.9.0",
     "livekit-client": "^2.1.3",
-    "lodash": "^4.17.21",
     "matomo-tracker": "^2.2.4",
     "mime": "^3.0.0",
     "node-rsa": "^1.0.8",
@@ -133,9 +132,9 @@
     "simple-thumbnail": "^1.6.5",
     "sqlite-cipher": "^0.3.6",
     "strophe.js": "^3.0.1",
-    "url-metadata": "^2.4.0",
+    "url-metadata": "^4.1.1",
     "uuid": "^10.0.0",
-    "validator": "^13.7.0",
+    "validator": "^13.12.0",
     "vcards-js": "^2.10.0",
     "vcf": "^2.1.0",
     "ws": "^7.3.1",
