--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "commonjs",
   "scripts": {
-    "start": "electron .",
+    "start": "set NODE_ENV=dev&& electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "test": "jest --coverage --runInBand --testPathIgnorePatterns spectron",
@@ -86,8 +86,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^32.0.1",
-    "electron-builder": "^21.0.15",
-    "electron-builder-squirrel-windows": "^22.14.13",
+    "electron-builder": "^25.0.5",
     "jest": "^26.0.1",
     "node-forge": "^1.3.1",
     "node-gyp": "^5.0.3",
@@ -104,15 +103,13 @@
     "aes-js": "^3.1.2",
     "axios": "^1.7.7",
     "bignumber.js": "^9.1.2",
-    "bluebird": "^3.5.5",
     "chunking-streams": "0.0.8",
     "date-and-time": "^0.14.2",
     "dotenv": "^16.0.0",
-    "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
     "electron-prompt": "^1.3.1",
     "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^4.3.1",
+    "electron-updater": "^6.3.4",
     "electron-windows-badge": "^1.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "jquery-validation": "^1.19.3",
@@ -124,7 +121,6 @@
     "node-rsa": "^1.0.8",
     "node-signpdf": "^1.5.0",
     "nodemailer": "^6.8.0",
-    "os": "^0.1.1",
     "pkcs7": "^1.0.2",
     "postman-request": "^2.88.1-postman.33",
     "qrcode": "^1.5.3",
