--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mirsal",
+  "name": "mirsal",
   "version": "10.1.80",
   "description": "Mirsal Desktop Chat App",
   "main": "main.js",
@@ -23,9 +23,7 @@
     ],
     "asarUnpack": [
       "node_modules/@ffmpeg-installer/${os}-${arch}/ffmpeg",
-      "node_modules/@ffprobe-installer/${os}-${arch}/ffprobe",
-      "node_modules/win-ca/*",
-      "LottieEmoticons"
+      "node_modules/@ffprobe-installer/${os}-${arch}/ffprobe"
     ],
     "mac": {
       "category": "mirsal.desktop"
@@ -50,6 +48,7 @@
         "!DB/*",
         "!codeReview/*",
         "!docs/*",
+        "!LottieEmoticons/LottieFiles/*",
         "!env/*",
         "!node_modules/win-ca/pem/*",
         "!node_modules/@ffmpeg-installer/linux-x64/*",
@@ -88,7 +87,6 @@
     "electron": "^32.0.1",
     "electron-builder": "^25.0.5",
     "jest": "^26.0.1",
-    "node-forge": "^1.3.1",
     "node-gyp": "^5.0.3",
     "spectron": "^11.1.0",
     "wait-for-expect": "^3.0.2",
@@ -118,6 +116,7 @@
     "livekit-client": "^2.1.3",
     "matomo-tracker": "^2.2.4",
     "mime": "^3.0.0",
+    "node-forge": "^1.3.1",
     "node-rsa": "^1.0.8",
     "node-signpdf": "^1.5.0",
     "nodemailer": "^6.8.0",
